--- a/Wordle/Espec4/Espec4.html
+++ b/Wordle/Espec4/Espec4.html
@@ -31,7 +31,7 @@
             dui. Aliquam convallis odio ut lobortis tincidunt. Donec blandit convallis lacus, et congue est sollicitudin sit amet. Nam posuere nec purus vitae ultrices. Sed porta lacus vel malesuada pulvinar. Ut eros lectus, facilisis quis lacinia iaculis, gravida non tellus. Curabitur sit amet elit non leo iaculis malesuada ac vel metus. Nam tincidunt sagittis lacinia. Nam ut mi dictum, porttitor urna eu, eleifend dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer neque libero, aliquet a tellus tempor, cursus tincidunt es</p>
         <hr>
         <h3>¿Listo/a para jugar?</h3>
-        <a href="../Espec5/Espec5.html"><button>JUGAR</button></a>
+        <input type="button" value="JUGAR" onclick="location.href='../Espec5/Espec5.php'">
     </div>
 </body>
-</html>
+</html> 
